[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-test"
version = "0.0.1"
dependencies = [
    "babel",
    "pillow"
]
authors = [
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" },
    { name = "Endstone Developers", email = "hello@endstone.dev" },
]
description = "Endstone plugin that tests the functionality of APIs."
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "test"]

[project.urls]
Homepage = "https://github.com/EndstoneMC/endstone-test"

[project.entry-points."endstone"]
test = "endstone_test:TestPlugin"
